[gd_scene load_steps=4 format=3 uid="uid://c0qnh5mq3bece"]

[ext_resource type="Script" path="res://addons/edit_grid/src/eidt_main/edit_main.gd" id="1_cser6"]
[ext_resource type="Script" path="res://addons/edit_grid/src/eidt_main/menu_list.gd" id="1_grbly"]
[ext_resource type="PackedScene" uid="uid://dr56xjtb3v5cn" path="res://addons/edit_grid/src/edit_grid/edit_grid.tscn" id="1_v8wrj"]

[node name="EditMain" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 2
script = ExtResource("1_cser6")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Menu" type="MenuBar" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
script = ExtResource("1_grbly")

[node name="EditGrid" parent="VBoxContainer" instance=ExtResource("1_v8wrj")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 4

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
modulate = Color(1, 1, 1, 0.627451)
layout_mode = 2
text = "File Path: "

[node name="FilePathLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "null"

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0.627451)
layout_mode = 2
text = "Status: "

[node name="SaveStatusLabel" type="Label" parent="VBoxContainer/PanelContainer/MarginContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Saved"

[connection signal="menu_pressed" from="VBoxContainer/Menu" to="VBoxContainer" method="_on_menu_menu_pressed"]
[connection signal="cell_value_changed" from="VBoxContainer/EditGrid" to="VBoxContainer" method="_on_edit_grid_cell_value_changed"]
